<?xml version="1.0" encoding="utf-8"?>
<com.simple.phonetics.ui.view.InterceptCoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_root_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:alpha="0.3"
        android:scaleX="2"
        android:scaleY="2"
        android:src="@drawable/img_blur"
        android:translationZ="-2dp"
        app:layout_anchor="@id/recycler_view"
        app:layout_anchorGravity="top" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <FrameLayout
                android:id="@+id/frame_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.simple.phonetics.ui.view.SelectionEdittext
                    android:id="@+id/et_text"
                    style="?attr/textBody1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:gravity="top"
                    android:paddingHorizontal="16dp"
                    android:paddingTop="16dp"
                    android:paddingBottom="56dp"
                    android:textColor="?attr/colorOnBackground"
                    android:textColorHint="?attr/colorOnBackgroundVariant"
                    android:textSize="30sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="56dp"
                    android:layout_gravity="bottom|end"
                    android:gravity="center_vertical"
                    android:paddingEnd="8dp">

                    <FrameLayout
                        android:id="@+id/frame_reverse"
                        android:layout_width="wrap_content"
                        android:layout_height="56dp"
                        android:paddingHorizontal="8dp">

                        <TextView
                            android:id="@+id/tv_reverse"
                            style="?attr/textCaption"
                            android:layout_width="wrap_content"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:paddingHorizontal="8dp"
                            tools:rv_cornerRadius="8dp"
                            tools:rv_strokeColor="?attr/colorPrimary"
                            tools:rv_strokeWidth="1dp"
                            tools:text="Reverse"
                            tools:textColor="?attr/colorAccent" />
                    </FrameLayout>

                    <FrameLayout
                        android:id="@+id/frame_clear"
                        android:layout_width="wrap_content"
                        android:layout_height="56dp"
                        android:paddingHorizontal="8dp">

                        <TextView
                            android:id="@+id/tv_clear"
                            style="?attr/textCaption"
                            android:layout_width="wrap_content"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:paddingHorizontal="8dp"
                            tools:rv_cornerRadius="8dp"
                            tools:rv_strokeColor="?attr/colorPrimary"
                            tools:rv_strokeWidth="1dp"
                            tools:text="Clear"
                            tools:textColor="?attr/colorAccent" />
                    </FrameLayout>

                    <ImageView
                        android:id="@+id/iv_paste"
                        android:layout_width="40dp"
                        android:layout_height="56dp"
                        android:contentDescription="get text from clip"
                        android:paddingHorizontal="8dp"
                        android:src="@drawable/ic_paste_accent_24dp"
                        android:visibility="gone"
                        tools:visibility="visible" />

                    <ImageView
                        android:id="@+id/iv_microphone"
                        android:layout_width="40dp"
                        android:layout_height="56dp"
                        android:contentDescription="take text from microphone"
                        android:paddingHorizontal="8dp"
                        android:src="@drawable/ic_microphone_24dp"
                        android:visibility="gone"
                        tools:visibility="visible" />

                    <ImageView
                        android:id="@+id/iv_gallery"
                        android:layout_width="40dp"
                        android:layout_height="56dp"
                        android:contentDescription="take image from gallery"
                        android:paddingHorizontal="8dp"
                        android:src="@drawable/ic_gallery_accent_24dp"
                        android:visibility="gone"
                        tools:visibility="visible" />

                    <ImageView
                        android:id="@+id/iv_camera"
                        android:layout_width="40dp"
                        android:layout_height="56dp"
                        android:contentDescription="take image from camera"
                        android:paddingHorizontal="8dp"
                        android:src="@drawable/ic_camera_accent_24dp"
                        android:visibility="gone"
                        tools:visibility="visible" />

                </LinearLayout>

                <FrameLayout
                    android:layout_width="48dp"
                    android:layout_height="56dp"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="4dp">

                    <ImageView
                        android:id="@+id/iv_read"
                        android:layout_width="48dp"
                        android:layout_height="56dp"
                        android:layout_gravity="center"
                        android:contentDescription="start read text"
                        android:padding="12dp"
                        android:src="@drawable/ic_volume_24dp"
                        android:visibility="gone"
                        tools:visibility="visible" />

                    <ImageView
                        android:id="@+id/iv_stop"
                        android:layout_width="48dp"
                        android:layout_height="56dp"
                        android:layout_gravity="center"
                        android:contentDescription="stop read text"
                        android:padding="12dp"
                        android:src="@drawable/ic_pause_24dp"
                        android:visibility="gone"
                        tools:visibility="visible" />

                    <ImageView
                        android:id="@+id/iv_picture"
                        android:layout_width="48dp"
                        android:layout_height="56dp"
                        android:layout_gravity="center"
                        android:contentDescription="image take text"
                        android:padding="12dp"
                        android:visibility="gone"
                        tools:visibility="visible" />

                    <ProgressBar
                        android:id="@+id/progress"
                        android:layout_width="48dp"
                        android:layout_height="56dp"
                        android:layout_gravity="center"
                        android:visibility="gone"
                        tools:visibility="visible" />
                </FrameLayout>
            </FrameLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:contentInsetStart="0dp"
                app:layout_collapseMode="pin">

                <FrameLayout
                    android:id="@+id/frame_header"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <View
                        android:id="@+id/toolbar_background"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:alpha="0" />

                    <ImageView
                        android:id="@+id/iv_premium"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center_vertical|start"
                        android:layout_marginEnd="4dp"
                        android:contentDescription="language find phonetics"
                        android:padding="12dp"
                        android:transitionName="iv_premium"
                        android:visibility="gone"
                        tools:src="@drawable/ic_arrow_left_on_surface"
                        tools:visibility="visible" />

                    <TextView
                        android:id="@+id/tv_title"
                        style="?attr/textHeadline6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="?attr/colorOnBackgroundVariant" />

                    <ImageView
                        android:id="@+id/iv_language"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center_vertical|end"
                        android:layout_marginEnd="4dp"
                        android:contentDescription="language find phonetics"
                        android:padding="12dp"
                        android:transitionName="select_language" />
                </FrameLayout>
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.simple.adapter.MultiRecyclerView
            android:id="@+id/rec_filter"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:clipToPadding="false"
            android:nestedScrollingEnabled="false"
            android:paddingVertical="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="8dp" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <com.simple.adapter.MultiRecyclerView
        android:id="@+id/rec_suggest"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="bottom"
        android:clipToPadding="false"
        android:paddingHorizontal="8dp"
        android:paddingVertical="8dp"
        android:visibility="gone" />

    <View
        android:id="@+id/v_temp"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_gravity="bottom"
        android:transitionName="temp"
        android:translationY="20dp" />
</com.simple.phonetics.ui.view.InterceptCoordinatorLayout>